refactor: BowlingScoreBoard
맵에서 Frame의 리스트로 변경
 - 기존 일급 불변 리스트가 아닌 일급 변경 가능 리스트
 - 이 둘의 공통 부모인 일급 추상 리스트
 - unmodifiedList를 언제하는가
 - append의 로직 차이
 - 변경 가능 리스트에는 setElement 추가
 - 리스트이므로 current는 리스트의 마지막이므로 들고 있을 필요 없어짐
 - nextFrame 수정
 - isEnd 추가
 - 그외 불필요한 로직 정리